--- a/Task_Management.ipynb
+++ b/Task_Management.ipynb
@@ -182,7 +182,7 @@
             "Choose an option (1-5): 1\n",
             "Enter task name: file checking\n",
             "Enter priority (High / Medium / Low): medium\n",
-            "✅ Task added successfully!\n",
+            "Task added successfully!\n",
             "\n",
             "Secret Agency Task Manager\n",
             "1. Add Task\n",
@@ -192,7 +192,7 @@
             "5. Exit\n",
             "Choose an option (1-5): 2\n",
             "\n",
-            "📋 Task List:\n",
+            "Task List:\n",
             "1. file checking | Status: Pending | Priority: Medium\n",
             "\n",
             "Secret Agency Task Manager\n",
@@ -203,7 +203,7 @@
             "5. Exit\n",
             "Choose an option (1-5): 3\n",
             "\n",
-            "📋 Task List:\n",
+            "Task List:\n",
             "1. file checking | Status: Pending | Priority: Medium\n",
             "\n",
             "Enter task number to mark as completed: 1\n",
@@ -217,7 +217,7 @@
             "5. Exit\n",
             "Choose an option (1-5): 2\n",
             "\n",
-            "📋 Task List:\n",
+            "Task List:\n",
             "1. file checking | Status: Completed | Priority: Medium\n",
             "\n",
             "Secret Agency Task Manager\n",
